--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <div class="absolute inset-4 border border-brand-gold/10 animate-[spin_15s_linear_infinite_reverse] rounded-full"></div>
                     <div class="relative w-full h-full rounded-2xl overflow-hidden border-2 border-brand-gold/20 p-2 bg-brand-black shadow-2xl group text-center">
                         <!-- Profil Hanif -->
-                        <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?q=80&w=800&auto=format&fit=crop" 
+                        <img src="https://s6.imgcdn.dev/YGsCIH.png" 
                              alt="Hanif Saifudin" 
                              class="w-full h-full object-cover grayscale brightness-90 group-hover:grayscale-0 group-hover:brightness-100 transition-all duration-700">
                         <div class="absolute inset-0 bg-gradient-to-t from-brand-black/80 via-transparent to-transparent"></div>
