--- a/index.html
+++ b/index.html
@@ -638,14 +638,23 @@
     <!-- END MAIN WRAPPER -->
 
     <!-- START FOOTER & BACK TO TOP -->
-    <footer class="py-8 text-center border-t border-white/5 bg-brand-black text-slate-600 text-[10px] font-mono uppercase tracking-widest relative z-10 w-full">
+    <footer class="py-8 text-center border-t border-white/5 bg-brand-black text-slate-600 text-[10px] font-mono uppercase tracking-widest relative z-10 w-full flex flex-col items-center gap-4">
         <p>System.exit(0); // © 2026 Hanif Saifudin // Event Production & Tech Ops</p>
+        
+        <!-- START VISITOR WIDGET (TECH STYLE) -->
+        <div class="flex items-center gap-2 opacity-40 hover:opacity-100 transition-opacity cursor-default mt-2">
+            <a href="https://hits.seeyoufarm.com" target="_blank">
+                <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fhanifjbg.github.io&count_bg=%23f59e0b&title_bg=%23141414&icon=github.svg&icon_color=%23f59e0b&title=SYS_VISITORS&edge_flat=true" alt="Visitor Tracker" class="h-5 rounded-sm">
+            </a>
+        </div>
+        <!-- END VISITOR WIDGET -->
     </footer>
 
     <button id="backToTop" class="fixed bottom-8 right-8 z-40 p-3 bg-brand-gold text-brand-black rounded-full shadow-[0_0_20px_rgba(245,158,11,0.4)] hover:scale-110 hover:bg-white transition-all duration-500 opacity-0 translate-y-10 pointer-events-none">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"><path d="m18 15-6-6-6 6"/></svg>
     </button>
     <!-- END FOOTER -->
+
 
     <!-- START POPUP MODAL (GAMBAR BESAR DI ATAS) -->
     <div id="project-modal" class="fixed inset-0 z-50 flex items-center justify-center p-4 sm:p-6 opacity-0 pointer-events-none transition-opacity duration-300">
